# SAOS

./: .gitignore  README.md  mkdocs.yml  requirements.txt  setup.cfg
OOPAO/: Asterism.py  Atmosphere.py  CorrelatingShackHartmann.py  DeformableMirror.py  Detector.py  ExtendedSource.py  InteractionMatrixHandler.py  Layer.py  LightPath.py  LoggingHelper.py  ScienceCam.py  ShackHartmann.py  Sharepoint.py  Source.py  Telescope.py  __init__.py  phaseStats.py
OOPAO/calibration/: InteractionMatrix.py  compute_KL_modal_basis.py
OOPAO/modalBasis/: discHarmonicModes.py  hadamardModes.py  karhunenLoeveModes.py  zernikeModes.py  zonalModes.py
OOPAO/tools/: interpolateGeometricalTransformation.py  tools.py
SAOS/: Asterism.py  Atmosphere.py  CorrelatingShackHartmann.py  DeformableMirror.py  Detector.py  ExtendedSource.py  InteractionMatrixHandler.py  Layer.py  LightPath.py  LoggingHelper.py  MisRegistration.py  NCPA.py  Savepoint.py  ScienceCam.py  ShackHartmann.py  Sharepoint.py  Telescope.py  infinitePhaseScreen.py
SAOS/modalBasis/: discHarmonicModes.py  karhunenLoeveModes.py  zonalModes.py
SAOS/tools/: displayTools.py  interpolateGeometricalTransformation.py  tools.py
docs/: atmosphere.md  deformable_mirror.md  extended_source.md  index.md  interaction_matrix.md  light_path.md  misregistration.md  sharepoint.md  shwfs.md  source.md
