[metadata]
name = SAOS
description = SAOS
author = nrodlin
;version = attr: SAOS.__version__
license = GPLv3
license_files = LICENSE
platforms = linux
url = https://github.com/nrodlin/SAOS
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.13.2t
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
packages =
    SAOS
install_requires =
    astropy
    joblib
    jsonpickle
    matplotlib
    mpmath
    numpy
    numexpr
    psutil
    scikit-learn
    scipy
    tqdm
    torch
    opencv-contrib-python
    
python_requires =
    >=3.6
package_dir =
    =.
zip_safe =
    no

[options.extras_require]
cuda =
    cupy

;[options.entry_points]
;console_scripts =
;    SAOS = SAOS.main:main
